Add deployment configuration and documentation

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,9 @@
                     </button>
                 </div>
             </div>
-
+                <script>
+                (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="QSWH9Ha4bMndnaS70hKst";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+                </script>
             <!-- Recipe Display Column -->
             <div class="md:w-2/3">
                 <div id="recipe-container" class="hidden">
